slick bug on mobile

--- a/static/css/recent-post.css
+++ b/static/css/recent-post.css
@@ -56,6 +56,7 @@
 
 .rp-readmore:after {
   content: "\f061";
+  font-family: FontAwesome;
   margin-left: -10px;
   opacity: 0;
   vertical-align: middle;
